--- a/orlundo_portfolio/styles/globals.css
+++ b/orlundo_portfolio/styles/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+
+@font-face {
+    font-family: "Burtons";
+    src: url("../public/Burtons.otf");
+}
